rcon.css
body {
  font-family: Arial, sans-serif;
  background-color: #121212;
  margin: 0;
  padding: 0;
  color: white;
}

main {
  padding: 20px;
}

nav#menu {
  background-color: #333;
  color: #fff;
  justify-content: space-between;
  align-items: center;
  padding: 10px 20px;
}

#maps {
  display: flex;
  gap: 15px;
}

#gamemodes {
  display: flex;
  gap: 15px;
}

.console-output {
  width: 100%;
  flex-grow: 1;
  padding: 10px;
  background-color: #1f1f1f;
  border: 1px solid #444444;
  border-radius: 5px;
  color: #ffffff;
  resize: none;
  font-family: monospace;
  box-sizing: border-box;
  overflow-y: auto;
  min-height: 200px;
}

#console-window {
  height: 76%;
}

.group-container {
  margin-top: 67px;
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
  width: 100%;
}

.group-element {
  background-color: #222;
  padding: 20px;
  border-radius: 10px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
}

.group-element input,
.group-element button {
  padding: 10px;
  border: 1px solid #444444;
  border-radius: 5px;
  background-color: #333;
  color: #ffffff;
  margin-bottom: 15px;
  margin-top: 5px;
  width: 100%;
  box-sizing: border-box;
}

.group-element button {
  background-color: #fa8072;
  transition: background-color 0.3s ease;
}

.group-element button:hover {
  background-color: #ff4733;
}

.tile-container.maps {
  display: grid;
  grid-template-columns: repeat(4, minmax(150px, 1fr));
  gap: 20px;
}

.tile-container.gamemodes {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 20px;
}

.tile {
  position: relative;
  padding-bottom: 100%;
  overflow: hidden;
  border-radius: 10px;
  cursor: pointer;
  transition: transform 0.2s ease;
}

.tile:hover {
  transform: scale(1.05);
}

.tile .background {
  position: absolute;
  width: 100%;
  height: 100%;
  filter: blur(3px);
  background-size: cover;
  background-position: center;
}

.tile .foreground {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 60%;
}

.tile.gamemode {
  padding-bottom: 50%;
  width: 320px;
}

.tile.gamemode:hover {
  transform: scale(1.02);
}

.hover-container {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: none;
  z-index: 3;
  border-radius: 10px;
  overflow: hidden;
}

.tile:hover .hover-container {
  display: flex;
}

.hover-section {
  flex: 1;
  position: relative;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: background-color 0.3s ease;
}

.hover-left {
  border-right: 1px solid rgba(255, 255, 255, 0.5);
}

.hover-right {
  border-left: 1px solid rgba(255, 255, 255, 0.5);
}

.hover-bg {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center;
  z-index: 1;
  opacity: 0.2;
}

.hover-text {
  position: relative;
  z-index: 2;
  font-size: 50px;
  font-weight: bold;
  color: white;
  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.8);
}

.hover-section:hover {
  background-color: rgba(0, 0, 0, 0.4);
}

#execute-command {
  flex: 1 1 calc(50% - 55px);
  height: 262px;
}

#setup-tile {
  flex: 1 1 calc(1.5em - 55px);
  height: 262px;
}

#console-output {
  flex: 1 1 100%;
  margin-top: -40px;
}

